<resources>
    <string name="app_name">EMassage</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="courses">Courses</string>
    <string name="category">Categories</string>
    <string name="lessons">Lessons</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="forums">Forums</string>
    <string name="more">More</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email Address</string>
</resources>
