<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="view"
            type="com.capstone.tip.emassage.ui.register.RegisterView" />
    </data>

    <FrameLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.capstone.tip.emassage.ui.register.RegisterActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/edit_text"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/edit_text"
                android:hint="@string/first_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/edit_text"
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/edit_text"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1" />

            <EditText
                android:id="@+id/et_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@android:drawable/edit_text"
                android:hint="@string/repeat_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:onClick="@{() -> view.onRegisterButtonClicked()}"
                android:text="@string/register" />

        </LinearLayout>

    </FrameLayout>

</layout>
